# labs2

./: .gitignore
lab1/: CMakeLists.txt  README.md  main.cpp  отчет.docx
lab1/hurray/: CMakeLists.txt  hurray.cpp  hurray.h
lab1/mymath/: mymath.cpp  mymath.h
lab2/: CMakeLists.txt  busdata.txt  data.txt  main.cpp  old.txt  planet.cpp  planet.h  отчёт.docx
lab2/buslib/: CMakeLists.txt  bus.cpp  bus.h
lab2/cppcheck/: x.cppcheck
lab2/cppcheck/x-cppcheck-build-dir/: CMakeCCompilerId.a1  CMakeCXXCompilerId.a1  bus.a1  files.txt  lastResults.xml  main.a1  main.s1  planet.a1  planet.s1  statistics.txt
lab2/planet/: CMakeLists.txt  planet.cpp  planet.h
lab3/: CMakeLists.txt  main.cpp  отчет.docx
lab3/fraction/: CMakeLists.txt  fraction.cpp  fraction.h
lab4/: CMakeLists.txt  main.cpp  v.bat  ~$отчет.docx  отчет.docx
lab4/MyStack/: CMakeLists.txt  MyStack.h
lab5/: main.cpp  отчет.docx
lab5/containers/: CMakeLists.txt  myset.cpp  myset.h  myvector.cpp  myvector.h
lab6/: CMakeLists.txt  main.cpp  отчет.docx
lab6/polynom/: CMakeLists.txt  polynom.cpp  polynom.h
lab7/: CMakeLists.txt  main.cpp  отчет.docx
lab7/Person/: CMakeLists.txt  person.cpp  person.h
lab8/: CMakeLists.txt  ex.txt  header.h  main.cpp  text.txt  отчет.docx
